hphp/hack/test/typecheck/nonnull/mixed_is_subtype_of_optional_nonnull2.php
<?hh

function get_default<T as nonnull>(?T $val, T $default): T {
  return $val ?? $default;
}

function f(mixed $x): nonnull {
  return get_default($x, 42);
}
